make change bg img

--- a/00-webpack-start/public/index.html
+++ b/00-webpack-start/public/index.html
@@ -9,13 +9,9 @@
     <script defer src="index.js"></script> -->
   </head>
   <body>
-    <div class="season-wrapper">
+    <div class="season-wrapper" id="seasonContainer">
       <h1>Weather Sounds</h1>
-      <div class="seasons flex">
-        <div id="0" class="season summer"></div>
-        <div id="1" class="season rain"></div>
-        <div id="2" class="season winter"></div>
-      </div>
+      <div class="seasons flex" id="seasons"></div>
       <div class="volume">
         <input type="range" id="volume-slider" />
       </div>
